# linkedin-insights-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: cache.py  llm.py
app/api/v1/: deps.py
app/api/v1/routers/: pages.py  people.py  posts.py  summary.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/db/: indexes.py  page.py  person.py  post.py
app/repositories/: base.py  page.py  post.py
app/scrapers/: apify_client.py  dto.py  scraper.py  selectors.py
app/services/: page_service.py  summary_service.py
postman/: Postman_collection.json  openapi.json
scripts/: create_session.py  scrape.py  test_extract.py
