[project]
name = "linkedin-insights-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]
